Adjust notification service and scraper logic
# Refactor `getWorkTitle` to replace `get(0)` with `getFirst` for clarity.
+ Add `titulo` variable initialization in `MediocrescanService` to improve readability.
- Remove excessive commented-out code in scraper logic for better maintainability.
# Update scraper call to use `titulo` variable in obra listing.